# host-deck

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: build.yml
public/: styles.css
public/js/: agent.js  sftp.js  terminal.js
scripts/: release.sh  releases.json
src/: api.rs  app.rs  main.rs  models.rs  sftp_api.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_ssh_connections.sql  002_create_known_hosts.sql  003_create_agent_providers.sql  004_create_agent_model_cache.sql  005_add_provider_to_ssh_connections.sql  006_allow_openrouter_kind.sql  007_create_app_settings.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/: domain.rs  events.rs  loop.rs  mod.rs  models.rs  policy.rs  provider.rs  redact.rs  registry.rs  sse.rs  tools.rs
src-tauri/src/agent/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/commands/: agent_commands.rs  connection_commands.rs  mod.rs  provider_commands.rs  sftp_commands.rs  terminal_commands.rs
src-tauri/src/domain/: agent_provider.rs  auth_method.rs  mod.rs  remote_entry.rs  ssh_connection.rs
src-tauri/src/infra/: agent_repository.rs  credential_store.rs  db.rs  mod.rs  settings.rs  sqlite_repository.rs
src-tauri/src/sftp/: client.rs  events.rs  mod.rs  registry.rs  transfer.rs
src-tauri/src/ssh/: auth.rs  client.rs  e2e_tests.rs  events.rs  host_key.rs  mod.rs  registry.rs  scrollback.rs  session.rs
src/bindings/: agent.rs  mod.rs  sftp.rs  tauri.rs  terminal.rs
src/components/: agent_panel.rs  confirm_dialog.rs  connection_form.rs  connection_list.rs  layout.rs  mod.rs  provider_settings.rs  sftp_panel.rs  terminal_panel.rs
