[package]
name = "host-deck-ui"
version = "0.1.1"
edition = "2024"
description = "HostDeck — frontend Leptos"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "PointerEvent",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde_json = "1.0.150"

[profile.release]
opt-level = "s"
lto = true

[workspace]
exclude = ["src-tauri"]
